[package]
name = "yi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
md-5 = "0.10.6"
owo-colors = "4.2.3"
quick-xml = "0.38.4"
rand = "0.9.2"
reqwest = { version = "0.12.25", features = ["blocking", "json", "socks"] }
rodio = "0.21.1"
serde = "1.0.228"
serde_json = "1.0.145"
